fix java toolchain version